<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hp">Hp</string>
    <string name="hp_divisor">/</string>
    <string name="add_new_soldier">add new soldier</string>
    <string name="mp">Mp</string>
    <string name="br">Br</string>
    <string name="fa">Fa</string>
    <string name="ct">Ct</string>
    <string name="bravery">Bravery</string>
    <string name="faith">Faith</string>
    <string name="zodiac">zodiac</string>
    <string name="base_ct">100</string>
    <string name="expand">Expandir</string>
    <string name="stats_dots">…</string>
    <string name="speed">Speed</string>
    <string name="jump">Jump</string>
    <string name="move">Move</string>
    <string name="weapon_power">Weapon Power</string>
    <string name="r">R</string>
    <string name="l">L</string>
    <string name="percent">%</string>
    <string name="bar">/</string>
    <string name="s_ev">S-EV</string>
    <string name="a_ev">A-EV</string>
    <string name="atk">ATK</string>
    <string name="c_ev">C-EV</string>
</resources>