<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="com.rcacao.tactics.teambuild.view.viewmodel.TeamBuilderViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teamBuilderBackColor"
        tools:ignore="SmallSp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/panelData"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/portrait_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible">

            <TextView
                android:id="@+id/textSpeed"
                style="@style/StatsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginBottom="4dp"
                android:text="@string/speed"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textJump"
                style="@style/StatsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/jump"
                app:layout_constraintBottom_toTopOf="@+id/textSpeed"
                app:layout_constraintEnd_toEndOf="@+id/textSpeed" />

            <TextView
                android:id="@+id/textMove"
                style="@style/StatsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:text="@string/move"
                app:layout_constraintBottom_toTopOf="@+id/textJump"
                app:layout_constraintEnd_toEndOf="@+id/textSpeed"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textDotMove"
                style="@style/StatsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:text="@string/stats_dots"
                app:layout_constraintBottom_toBottomOf="@+id/textMove"
                app:layout_constraintStart_toEndOf="@+id/textMove"
                app:layout_constraintTop_toTopOf="@+id/textMove" />

            <TextView
                android:id="@+id/textDotJump"
                style="@style/StatsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:text="@string/stats_dots"
                app:layout_constraintBottom_toBottomOf="@+id/textJump"
                app:layout_constraintStart_toEndOf="@+id/textJump"
                app:layout_constraintTop_toTopOf="@+id/textJump" />

            <TextView
                android:id="@+id/textDotSpeed"
                style="@style/StatsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:text="@string/stats_dots"
                app:layout_constraintBottom_toBottomOf="@+id/textSpeed"
                app:layout_constraintStart_toEndOf="@+id/textSpeed"
                app:layout_constraintTop_toTopOf="@+id/textSpeed" />

            <TextView
                android:id="@+id/textCurrentMove"
                style="@style/StatsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                app:layout_constraintBottom_toBottomOf="@+id/textDotMove"
                app:layout_constraintStart_toEndOf="@+id/textDotMove"
                app:layout_constraintTop_toTopOf="@+id/textDotMove"
                tools:text="00" />

            <TextView
                android:id="@+id/textCurrentJump"
                style="@style/StatsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                app:layout_constraintBottom_toBottomOf="@+id/textDotJump"
                app:layout_constraintStart_toEndOf="@+id/textDotJump"
                app:layout_constraintTop_toTopOf="@+id/textDotJump"
                tools:text="00" />

            <TextView
                android:id="@+id/textCurrentSpeed"
                style="@style/StatsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                app:layout_constraintBottom_toBottomOf="@+id/textDotSpeed"
                app:layout_constraintStart_toEndOf="@+id/textDotSpeed"
                app:layout_constraintTop_toTopOf="@+id/textDotSpeed"
                tools:text="00" />

            <TextView
                android:id="@+id/textWeapon"
                style="@style/StatsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weapon_power"
                app:layout_constraintBottom_toBottomOf="@+id/textDotMove"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                app:layout_constraintStart_toEndOf="@+id/textCurrentMove"
                app:layout_constraintTop_toTopOf="@+id/textDotMove" />

            <TextView
                android:id="@+id/textR"
                style="@style/StatsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/r"
                app:layout_constraintBottom_toBottomOf="@+id/textDotJump"
                app:layout_constraintStart_toStartOf="@id/textWeapon"
                app:layout_constraintTop_toTopOf="@+id/textDotJump" />

            <TextView
                android:id="@+id/textL"
                style="@style/StatsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/l"
                app:layout_constraintBottom_toBottomOf="@+id/textDotSpeed"
                app:layout_constraintEnd_toEndOf="@+id/textR"
                app:layout_constraintTop_toTopOf="@+id/textDotSpeed" />

            <TextView
                android:id="@+id/textDotR"
                style="@style/StatsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:text="@string/stats_dots"
                app:layout_constraintBottom_toBottomOf="@+id/textR"
                app:layout_constraintStart_toEndOf="@+id/textR"
                app:layout_constraintTop_toTopOf="@+id/textR" />

            <TextView
                android:id="@+id/textDotL"
                style="@style/StatsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:text="@string/stats_dots"
                app:layout_constraintBottom_toBottomOf="@+id/textL"
                app:layout_constraintStart_toEndOf="@+id/textL"
                app:layout_constraintTop_toTopOf="@+id/textL" />

            <TextView
                android:id="@+id/textCurrentR"
                style="@style/StatsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                app:layout_constraintBottom_toBottomOf="@+id/textDotR"
                app:layout_constraintStart_toEndOf="@+id/textDotR"
                app:layout_constraintTop_toTopOf="@+id/textDotR"
                tools:text="000" />

            <TextView
                android:id="@+id/textCurrentL"
                style="@style/StatsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                app:layout_constraintBottom_toBottomOf="@+id/textDotL"
                app:layout_constraintStart_toEndOf="@+id/textDotL"
                app:layout_constraintTop_toTopOf="@+id/textDotL"
                tools:text="000" />

            <TextView
                android:id="@+id/textPerR"
                style="@style/StatsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:text="@string/percent"
                app:layout_constraintBottom_toBottomOf="@+id/textDotR"
                app:layout_constraintEnd_toEndOf="@+id/textWeapon"
                app:layout_constraintTop_toTopOf="@+id/textDotR" />

            <TextView
                android:id="@+id/textPerL"
                style="@style/StatsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:text="@string/percent"
                app:layout_constraintBottom_toBottomOf="@+id/textDotL"
                app:layout_constraintEnd_toEndOf="@+id/textPerR"
                app:layout_constraintTop_toTopOf="@+id/textDotL" />

            <TextView
                android:id="@+id/textCurrentPerR"
                style="@style/StatsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                app:layout_constraintBottom_toBottomOf="@+id/textDotR"
                app:layout_constraintEnd_toStartOf="@+id/textPerR"
                app:layout_constraintTop_toTopOf="@+id/textDotR"
                tools:text="00" />

            <TextView
                android:id="@+id/textCurrentPerL"
                style="@style/StatsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                app:layout_constraintBottom_toBottomOf="@+id/textDotL"
                app:layout_constraintEnd_toStartOf="@+id/textPerL"
                app:layout_constraintTop_toTopOf="@+id/textDotL"
                tools:text="00" />

            <TextView
                android:id="@+id/textBarR"
                style="@style/StatsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bar"
                app:layout_constraintBottom_toBottomOf="@+id/textDotR"
                app:layout_constraintEnd_toStartOf="@+id/textCurrentPerR"
                app:layout_constraintStart_toEndOf="@+id/textCurrentR"
                app:layout_constraintTop_toTopOf="@+id/textDotR" />

            <TextView
                android:id="@+id/textBarL"
                style="@style/StatsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bar"
                app:layout_constraintBottom_toBottomOf="@+id/textDotL"
                app:layout_constraintEnd_toStartOf="@+id/textCurrentPerL"
                app:layout_constraintStart_toEndOf="@+id/textCurrentL"
                app:layout_constraintTop_toTopOf="@+id/textDotL" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".5" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>