<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="com.rcacao.tactics.teambuild.view.viewmodel.TeamBuilderViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teamBuilderBackColor"
        tools:ignore="SmallSp">

        <ImageView
            android:id="@+id/imgArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/expand"
            android:src="@drawable/ic_baseline_arrow_drop_up_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:showIfExists="@{viewmodel.selectedSoldier}" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/panelData"
            android:layout_width="0dp"
            android:layout_height="140dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgArrow"
            app:showIfExists="@{viewmodel.selectedSoldier}"
            tools:visibility="visible">

            <ImageView
                android:id="@+id/imgPortrait"
                android:layout_width="70dp"
                android:layout_height="105dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/portrait_background"
                android:importantForAccessibility="no"
                android:scaleType="fitXY"
                app:imageRes="@{viewmodel.selectedSoldier.portrait}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/fc_squire_male" />

            <TextView
                android:id="@+id/textCt"
                style="@style/SoldierItemStatsText.Portrait.Labels"
                android:layout_marginBottom="2dp"
                android:text="@string/ct"
                android:textColor="@color/ctColor"
                app:layout_constraintBottom_toBottomOf="@+id/imgPortrait"
                app:layout_constraintEnd_toEndOf="@+id/imgPortrait"
                app:layout_constraintStart_toEndOf="@+id/imgPortrait" />

            <TextView
                android:id="@+id/textMp"
                style="@style/SoldierItemStatsText.Portrait.Labels"
                android:layout_marginBottom="4dp"
                android:text="@string/mp"
                android:textColor="@color/mpColor"
                app:layout_constraintBottom_toTopOf="@+id/textCt"
                app:layout_constraintEnd_toEndOf="@+id/imgPortrait"
                app:layout_constraintStart_toEndOf="@+id/imgPortrait" />

            <TextView
                android:id="@+id/textHp"
                style="@style/SoldierItemStatsText.Portrait.Labels"
                android:layout_marginBottom="4dp"
                android:text="@string/hp"
                android:textColor="@color/hpColor"
                app:layout_constraintBottom_toTopOf="@+id/textMp"
                app:layout_constraintEnd_toEndOf="@+id/imgPortrait"
                app:layout_constraintStart_toEndOf="@+id/imgPortrait" />

            <TextView
                android:id="@+id/textCurrentHp"
                style="@style/SoldierItemStatsText.Portrait.CurrentStatus"
                android:text="@{viewmodel.selectedSoldier.hp}"
                android:textColor="@color/hpColor"
                app:layout_constraintStart_toEndOf="@+id/textHp"
                app:layout_constraintTop_toTopOf="@+id/textHp"
                tools:text="100" />

            <TextView
                android:id="@+id/textHpBar"
                style="@style/SoldierItemStatsText.Portrait.Bar"
                android:text="@string/bar"
                android:textColor="@color/hpColor"
                app:layout_constraintStart_toEndOf="@+id/textCurrentHp"
                app:layout_constraintTop_toTopOf="@+id/textCurrentHp" />

            <TextView
                android:id="@+id/textTotalHp"
                style="@style/SoldierItemStatsText.Portrait.TotalStatus"
                android:text="@{viewmodel.selectedSoldier.hp}"
                android:textColor="@color/hpColor"
                app:layout_constraintStart_toEndOf="@+id/textHpBar"
                app:layout_constraintTop_toTopOf="@+id/textHpBar"
                tools:text="100" />

            <TextView
                android:id="@+id/textCurrentMp"
                style="@style/SoldierItemStatsText.Portrait.CurrentStatus"
                android:text="@{viewmodel.selectedSoldier.mp}"
                android:textColor="@color/mpColor"
                app:layout_constraintStart_toEndOf="@+id/textMp"
                app:layout_constraintTop_toTopOf="@+id/textMp"
                tools:text="100" />

            <TextView
                android:id="@+id/textMpBar"
                style="@style/SoldierItemStatsText.Portrait.Bar"
                android:text="@string/bar"
                android:textColor="@color/mpColor"
                app:layout_constraintStart_toEndOf="@+id/textCurrentMp"
                app:layout_constraintTop_toTopOf="@+id/textCurrentMp" />

            <TextView
                android:id="@+id/textTotalMp"
                style="@style/SoldierItemStatsText.Portrait.TotalStatus"
                android:text="@{viewmodel.selectedSoldier.mp}"
                android:textColor="@color/mpColor"
                app:layout_constraintStart_toEndOf="@+id/textMpBar"
                app:layout_constraintTop_toTopOf="@+id/textMpBar"
                tools:text="100" />

            <TextView
                android:id="@+id/textCurrentCt"
                style="@style/SoldierItemStatsText.Portrait.CurrentStatus"
                android:text="@string/base_ct"
                android:textColor="@color/ctColor"
                app:layout_constraintStart_toEndOf="@+id/textCt"
                app:layout_constraintTop_toTopOf="@+id/textCt" />

            <TextView
                android:id="@+id/textCtBar"
                style="@style/SoldierItemStatsText.Portrait.Bar"
                android:text="@string/bar"
                android:textColor="@color/ctColor"
                app:layout_constraintStart_toEndOf="@+id/textCurrentCt"
                app:layout_constraintTop_toTopOf="@+id/textCurrentCt" />

            <TextView
                android:id="@+id/textTotalCt"
                style="@style/SoldierItemStatsText.Portrait.TotalStatus"
                android:text="@string/base_ct"
                android:textColor="@color/ctColor"
                app:layout_constraintStart_toEndOf="@+id/textCtBar"
                app:layout_constraintTop_toTopOf="@+id/textCtBar" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/portrait_background"
                app:layout_constraintBottom_toBottomOf="@+id/imgPortrait"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textTotalMp"
                app:layout_constraintTop_toTopOf="@+id/imgPortrait">

                <TextView
                    android:id="@+id/textId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@{Long.toString(viewmodel.selectedSoldier.id)}"
                    android:textSize="15sp"
                    android:textStyle="italic"
                    app:layout_constraintEnd_toEndOf="@+id/imgZodiac"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="01" />

                <TextView
                    android:id="@+id/textName"
                    style="@style/FrontText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="4dp"
                    android:text="@{viewmodel.selectedSoldier.name}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textId"
                    app:layout_constraintTop_toTopOf="@+id/textId"
                    tools:text="Michelangelo" />

                <TextView
                    android:id="@+id/textJob"
                    style="@style/FrontText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="4dp"
                    android:text="@{viewmodel.selectedSoldier.jobName}"
                    app:layout_constraintBottom_toTopOf="@+id/textBravery"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/textName"
                    app:layout_constraintTop_toBottomOf="@+id/textName"
                    tools:text="Squire" />

                <TextView
                    android:id="@+id/textBravery"
                    style="@style/FrontStats"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/bravery"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/textJob" />

                <TextView
                    android:id="@+id/textCurrentBravery"
                    style="@style/FrontStats"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:text="@{viewmodel.selectedSoldier.br}"
                    app:layout_constraintStart_toEndOf="@+id/textBravery"
                    app:layout_constraintTop_toTopOf="@+id/textBravery"
                    tools:text="99" />

                <TextView
                    android:id="@+id/textFaith"
                    style="@style/FrontStats"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/faith"
                    app:layout_constraintStart_toEndOf="@+id/textCurrentBravery"
                    app:layout_constraintTop_toTopOf="@+id/textCurrentBravery" />

                <ImageView
                    android:id="@+id/imgZodiac"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginBottom="4dp"
                    android:alpha=".2"
                    android:contentDescription="@string/zodiac"
                    app:imageRes="@{viewmodel.selectedSoldier.zodiacSprite}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:src="@drawable/z_sagittarius" />

                <TextView
                    android:id="@+id/textCurrentFaith"
                    style="@style/FrontStats"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:text="@{viewmodel.selectedSoldier.fa}"
                    app:layout_constraintStart_toEndOf="@+id/textFaith"
                    app:layout_constraintTop_toTopOf="@+id/textFaith"
                    tools:text="99" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>